--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +9,7 @@
     integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
     integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    crossorigin="anonymous" referrerpolicy="no-referrer"/>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -176,7 +175,7 @@
       <div class="row">
         <div class="col-lg-3">
           <div class="card" style="width: 15rem;height: 20em; border-radius: 1em;border: none;">
-            <img src="images/chair-n1.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
+            <img src="Images/chair-n2.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
             <div class="card-body">
               <p><b>Library stool chair</b></p>
               <h6>$20 <i class="icon fa-solid fa-cart-plus"></i></h6>
@@ -185,7 +184,7 @@
         </div>
         <div class="col-lg-3">
           <div class="card" style="width: 15rem;height: 20em; border-radius: 1em;border: none;">
-            <img src="images/chair-n2.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
+            <img src="Images/chair-n3.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
             <div class="card-body">
               <p><b>Library stool chair</b></p>
               <h6>$20 <i class="icon fa-solid fa-cart-plus"></i></h6>
@@ -194,7 +193,7 @@
         </div>
         <div class="col-lg-3">
           <div class="card" style="width: 15rem;height: 20em; border-radius: 1em;border: none;">
-            <img src="images/chair-n3.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
+            <img src="Images/chair-n4.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
             <div class="card-body">
               <p><b>Library stool chair</b></p>
               <h6>$20 <i class="icon fa-solid fa-cart-plus"></i></h6>
@@ -203,7 +202,8 @@
         </div>
         <div class="col-lg-3">
           <div class="card" style="width: 15rem;height: 20em; border-radius: 1em;border: none;">
-            <img src="images/chair-n4.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
+            <img src="Images/chair-n5 (1).jpg" class="card-img-top" alt="..."
+              style="height: 13em; border-radius: 20px;">
             <div class="card-body">
               <p><b>Library stool chair</b></p>
               <h6>$20 <i class="icon fa-solid fa-cart-plus"></i></h6>
@@ -215,7 +215,8 @@
       <div class="row mt-5">
         <div class="col-lg-3">
           <div class="card" style="width: 15rem;height: 20em; border-radius: 1em;border: none; ">
-            <img src="images/chair.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
+            <img src="Images/chair-n6 (1).jpg" class="card-img-top" alt="..."
+              style="height: 13em; border-radius: 20px;">
             <div class="card-body">
               <p><b>Library stool chair</b></p>
               <h6>$20 <i class="icon fa-solid fa-cart-plus"></i></h6>
@@ -224,7 +225,7 @@
         </div>
         <div class="col-lg-3">
           <div class="card" style="width: 15rem;height: 20em; border-radius: 1em;border: none;">
-            <img src="images/chair2.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
+            <img src="Images/chair.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
             <div class="card-body">
               <p><b>Library stool chair</b></p>
               <h6>$20 <i class="icon fa-solid fa-cart-plus"></i></h6>
@@ -233,7 +234,7 @@
         </div>
         <div class="col-lg-3">
           <div class="card" style="width: 15rem;height: 20em; border-radius: 1em;border: none;">
-            <img src="Images/chair7.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
+            <img src="Images/chair8 (1).jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
             <div class="card-body">
               <p><b>Library stool chair</b></p>
               <h6>$20 <i class="icon fa-solid fa-cart-plus"></i></h6>
@@ -242,7 +243,7 @@
         </div>
         <div class="col-lg-3">
           <div class="card" style="width: 15rem;height: 20em; border-radius: 1em;border: none;">
-            <img src="Images/chair8(1).jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
+            2<img src="Images/chair7.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
             <div class="card-body">
               <p><b>Library stool chair</b></p>
               <h6>$20 <i class="icon fa-solid fa-cart-plus"></i></h6>
@@ -267,7 +268,7 @@
                 unde velit at, consequatur animi quasi reiciendis quos expedita pariatur tenetur praesentium dignissimos
                 ullam cupiditate ut laboriosam.</p>
               <div>
-                <img src="images/test-img4.png" alt="client" class="rounded-circle" style="width: 5em;">
+                <img src="Images/test-img4.png" alt="client" class="rounded-circle" style="width: 5em;">
                 <div class="position2">
                   <h6>Williamson</h6>
                   <p>Web developer</p>
@@ -283,7 +284,7 @@
                 unde velit at, consequatur animi quasi reiciendis quos expedita pariatur tenetur praesentium dignissimos
                 ullam cupiditate ut laboriosam.</p>
               <div>
-                <img src="images/test-img4.png" alt="client" class="rounded-circle" style="width: 5em;">
+                <img src="Images/test-img4.png" alt="client" class="rounded-circle" style="width: 5em;">
                 <div class="position2">
                   <h6>Williamson</h6>
                   <p>Web developer</p>
@@ -299,7 +300,7 @@
                 unde velit at, consequatur animi quasi reiciendis quos expedita pariatur tenetur praesentium dignissimos
                 ullam cupiditate ut laboriosam.</p>
               <div>
-                <img src="images/test-img4.png" alt="client" class="rounded-circle" style="width: 5em;">
+                <img src="Images/test-img4.png" alt="client" class="rounded-circle" style="width: 5em;">
                 <div class="position2">
                   <h6>Williamson</h6>
                   <p>Web developer</p>
@@ -315,7 +316,7 @@
                 unde velit at, consequatur animi quasi reiciendis quos expedita pariatur tenetur praesentium dignissimos
                 ullam cupiditate ut laboriosam.</p>
               <div>
-                <img src="images/test-img4.png" alt="client" class="rounded-circle" style="width: 5em;">
+                <img src="Images/test-img4.png" alt="client" class="rounded-circle" style="width: 5em;">
                 <div class="position2">
                   <h6>Williamson</h6>
                   <p>Web developer</p>
@@ -335,7 +336,7 @@
       <div class="edit owl-carousel owl-theme">
         <div class="item">
           <div class="card" style="width: 15rem; border-radius: 1em;border: none;">
-            <img src="images/chair-n1 (1).jpg" class="card-img-top" alt="..."
+            <img src="Images/chair-n1 (1).jpg" class="card-img-top" alt="..."
               style="height: 13em; border-radius: 20px;">
             <div class="card-body">
               <p><b>Library stool chair</b></p>
@@ -345,7 +346,7 @@
         </div>
         <div class="item">
           <div class="card" style="width: 15rem;height: 20em; border-radius: 1em;border: none;">
-            <img src="images/chair-n1.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
+            <img src="Images/chair-n1.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
             <div class="card-body">
               <p><b>Library stool chair</b></p>
               <h6>$20 <i class="icon fa-solid fa-cart-plus"></i></h6>
@@ -354,7 +355,7 @@
         </div>
         <div class="item">
           <div class="card" style="width: 15rem;height: 20em; border-radius: 1em;border: none;">
-            <img src="images/chair-n2.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
+            <img src="Images/chair-n2.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
             <div class="card-body">
               <p><b>Library stool chair</b></p>
               <h6>$20 <i class="icon fa-solid fa-cart-plus"></i></h6>
@@ -363,7 +364,7 @@
         </div>
         <div class="item">
           <div class="card" style="width: 15rem;height: 20em; border-radius: 1em;border: none;">
-            <img src="images/chair-n3.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
+            <img src="Images/chair-n3.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
             <div class="card-body">
               <p><b>Library stool chair</b></p>
               <h6>$20 <i class="icon fa-solid fa-cart-plus"></i></h6>
@@ -381,7 +382,7 @@
         </div>
         <div class="item">
           <div class="card" style="width: 15rem;height: 20em; border-radius: 1em;border: none;">
-            <img src="images/chair-n4.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
+            <img src="Images/chair-n4.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
             <div class="card-body">
               <p><b>Library stool chair</b></p>
               <h6>$20 <i class="icon fa-solid fa-cart-plus"></i></h6>
@@ -390,7 +391,7 @@
         </div>
         <div class="item">
           <div class="card" style="width: 15rem;height: 20em; border-radius: 1em;border: none;">
-            <img src="images/chair1.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
+            <img src="Images/chair1.jpg" class="card-img-top" alt="..." style="height: 13em; border-radius: 20px;">
             <div class="card-body">
               <p><b>Library stool chair</b></p>
               <h6>$20 <i class="icon fa-solid fa-cart-plus"></i></h6>
